# serializer version: 1
# name: test_generic_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/generic": {
        "post": {
          "operationId": "postGenericcontrollerApiV1Generic",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/_UserDocument__UserInputData_"
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserDocument__UserOutputData_"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        },
        "_UserDocument__UserInputData_": {
          "properties": {
            "user": {
              "$ref": "#/components/schemas/_UserInputData"
            }
          },
          "type": "object",
          "required": [
            "user"
          ],
          "title": "_UserDocument__UserInputData_"
        },
        "_UserDocument__UserOutputData_": {
          "properties": {
            "user": {
              "$ref": "#/components/schemas/_UserOutputData"
            }
          },
          "type": "object",
          "required": [
            "user"
          ],
          "title": "_UserDocument__UserOutputData_"
        },
        "_UserInputData": {
          "properties": {
            "email": {
              "type": "string",
              "title": "Email"
            },
            "profile": {
              "$ref": "#/components/schemas/_UserProfile"
            }
          },
          "type": "object",
          "required": [
            "email",
            "profile"
          ],
          "title": "_UserInputData"
        },
        "_UserOutputData": {
          "properties": {
            "email": {
              "type": "string",
              "title": "Email"
            },
            "profile": {
              "$ref": "#/components/schemas/_UserProfile"
            },
            "uid": {
              "type": "string",
              "format": "uuid",
              "title": "Uid"
            }
          },
          "type": "object",
          "required": [
            "email",
            "profile",
            "uid"
          ],
          "title": "_UserOutputData"
        },
        "_UserProfile": {
          "properties": {
            "age": {
              "type": "integer",
              "title": "Age"
            }
          },
          "type": "object",
          "required": [
            "age"
          ],
          "title": "_UserProfile"
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_user_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/user": {
        "post": {
          "operationId": "postUsercontrollerApiV1User",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/_UserModel"
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "string"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      },
      "/api/v1/user-fast": {
        "post": {
          "operationId": "postUserfastcontrollerApiV1UserFast",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/_UserModel"
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "string"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        },
        "_UserModel": {
          "properties": {
            "email": {
              "type": "string",
              "format": "email",
              "title": "Email"
            },
            "password": {
              "type": "string",
              "format": "password",
              "title": "Password",
              "writeOnly": true
            },
            "preferred_color": {
              "type": "string",
              "format": "color",
              "title": "Preferred Color"
            }
          },
          "type": "object",
          "required": [
            "email",
            "password",
            "preferred_color"
          ],
          "title": "_UserModel"
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
